Use login/signup connecting through postgres

--- a/modules/signup/form.pug
+++ b/modules/signup/form.pug
@@ -5,10 +5,10 @@ form(
   fieldset
     .name-input.field
       label(
-        for='username'
+        for='fullname'
         ) Full Name
       input#username-value(
-        name='username'
+        name='fullname'
         placeholder=''
         required
         type='text'
