Add support for password reset. use sendgrid

--- a/modules/forgot_password/contents.pug
+++ b/modules/forgot_password/contents.pug
@@ -2,7 +2,7 @@
   .title-header
     h3 Forgot password?
 
-  #message.message
+  #message.message= message
     | Don't worry! It happens with most of us.
     | Enter email-id below and follow instructions received in your email
 
