--- a/modules/forgot_password/form.pug
+++ b/modules/forgot_password/form.pug
@@ -8,13 +8,13 @@ form(
         for='userid'
         ) Email Id
       input#userid-value(
-        name='userid'
+        name='email'
         placeholder='youremail@gmail.com'
         required
         type='email'
         )
     .button
       input(
-        type='button'
+        type='submit'
         value='Send Email'
         )
