--- a/modules/password_reset/contents.pug
+++ b/modules/password_reset/contents.pug
@@ -2,7 +2,7 @@
   .title-header
     h3 Reset Password
 
-  #error-message.message
+  #error-message.message= message
 
   .session-body
     .form-elements.password-reset
