--- a/modules/password_reset/form.pug
+++ b/modules/password_reset/form.pug
@@ -8,7 +8,7 @@ form(
         for='userpassword'
         ) Password
       input#userpassword-value(
-        name='userpassword'
+        name='password'
         placeholder='minimum 6 letters'
         required
         type='password'
