--- a/modules/login/form.pug
+++ b/modules/login/form.pug
@@ -12,6 +12,7 @@ form(
         placeholder='youremail@gmail.com'
         required
         type='email'
+        value= username
         )
     .password-input.field
       label(
