Add autofocus. match mailer

--- a/modules/forgot_password/form.pug
+++ b/modules/forgot_password/form.pug
@@ -12,6 +12,7 @@ form(
         placeholder='youremail@gmail.com'
         required
         type='email'
+        autofocus
         )
     .button
       input(
