--- a/modules/password_reset/form.pug
+++ b/modules/password_reset/form.pug
@@ -12,6 +12,7 @@ form(
         placeholder='minimum 6 letters'
         required
         type='password'
+        autofocus
         )
     .password-confirm.field
       label(
