--- a/modules/signup/form.pug
+++ b/modules/signup/form.pug
@@ -12,6 +12,7 @@ form(
         placeholder=''
         required
         type='text'
+        autofocus
         )
     .email-input.field
       label(
