--- a/modules/login/form.pug
+++ b/modules/login/form.pug
@@ -13,6 +13,7 @@ form(
         required
         type='email'
         value= username
+        autofocus
         )
     .password-input.field
       label(
