--- a/modules/session/frontend/main.scss
+++ b/modules/session/frontend/main.scss
@@ -1,14 +1,40 @@
 .contact-us #main-contents {
-  max-width: 1100px;
+  max-width: 1200px;
 
-  .session-options#contact-us {
-    position: relative;
-    transform: none;
-    vertical-align: top;
+  .contact-options {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
 
-    h3 {
-      margin-top: 0;
-      margin-bottom: 10px;
+    .option {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+      margin: 20px 0;
+    }
+
+    .icon {
+      height: 50px;
+      width: 50px;
+    }
+
+    .details {
+      width: 215px;
+    }
+
+    .contact-icon {
+      background: url(/assets/contacts-icon.png) no-repeat 0 0;
+      background-size: 50px 50px;
+    }
+
+    .timing-icon {
+      background: url(/assets/clock-icon.png) no-repeat 0 0;
+      background-size: 50px 50px;
+    }
+
+    .address-icon {
+      background: url(/assets/address_red_icon.png) no-repeat 0 0;
+      background-size: 50px 50px;
     }
   }
 
@@ -102,13 +128,14 @@
 
           label {
             display: inline-block;
-            width: 105px;
+            width: 140px;
           }
 
           .field {
             input {
               font-size: 14px;
-              height: 28px;
+              height: 32px;
+              padding: 0 10px;
               outline: 0;
               width: 250px;
             }
@@ -117,6 +144,22 @@
               height: 150px;
               vertical-align: middle;
               width: 350px;
+            }
+          }
+
+          .large-field {
+            @extend .field;
+
+            input {
+              width: 350px;
+            }
+
+            select {
+              width: 350px;
+            }
+
+            textarea {
+              width: 450px;
             }
           }
 
@@ -151,10 +194,10 @@
               border: 1px solid $button-hover-color;
               color: $link-color-bg;
               cursor: pointer;
-              font-size: 17px;
+              font-size: 16px;
               height: 40px;
               outline: 0;
-              width: 175px;
+              width: 185px;
 
               &:hover {
                 background-color: $button-hover-color;
@@ -192,6 +235,8 @@
   height: 90px;
 }
 
-.contact-us #main-contents .session-content .separator {
-  height: 355px;
+.contact-us #main-contents .session-body {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
